--- a/hothandler/templates/base_generic.html
+++ b/hothandler/templates/base_generic.html
@@ -4,6 +4,9 @@
   {% load static %}
   {% block title %}<title>Hot Handler</title>{% endblock %}
   <meta charset="utf-8">
+  {% block favicon %}
+  <link rel="shortcut icon" type="image/png" href="{% static 'images/logo.ico' %}"/>
+  {% endblock %}
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="{% static '/css/bootstrap.min.css' %}" >
   <!-- Add additional CSS in static file -->
@@ -32,5 +35,7 @@
 <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
 <script src="{% static 'js/popper.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
-{% block custom_js %}{% endblock %}
+{% block custom_js %}
+
+{% endblock %}
 </html>
