Different approch to sse for continus feed of data

--- a/hothandler/handle_accounts/templates/handle_accounts/dashboard.html
+++ b/hothandler/handle_accounts/templates/handle_accounts/dashboard.html
@@ -43,7 +43,7 @@
 						{% endfor %}
 					</table>
 				</div>
-
+				<a class="btn btn-primary  btn-sm btn-block" href="{% url 'events' %}">check out events</a>
 			</div>
 		</div>
 	</div>
